Nav Z-index corrected

--- a/Navigation/NavStyle.css
+++ b/Navigation/NavStyle.css
@@ -59,7 +59,6 @@ ul {
     background-color: var(--first-color);
     margin: 3px 30px ;
     border-radius: 10px;
-
 }
 
 
@@ -71,6 +70,7 @@ ul {
     opacity: 0;
     transition: all .2s ;
     width: 100%;
+    z-index: 3;
 }
 #hamburger--links li {
     transition: all 0.2s;
